--- a/assets/sass/cc-quote.scss
+++ b/assets/sass/cc-quote.scss
@@ -1,3 +1,12 @@
+.cc-quote-card {
+    /* Center, stacked from top to bottom */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-family: Georgia, serif;
+}
+
 .cc-quote-masthead {
 
     /* Fill viewport */
