Tweak border style

--- a/assets/sass/cc-quote.scss
+++ b/assets/sass/cc-quote.scss
@@ -12,7 +12,7 @@
     width: 280px;
 
     /* Make it a bit fancy with a nice font and double-sided border */
-    border: 5px double #272424;
+    border: 6px double silver;
     font-family: Georgia, serif;
 }
 
