Tweak quote card style

--- a/assets/sass/cc-quote.scss
+++ b/assets/sass/cc-quote.scss
@@ -14,6 +14,11 @@
     /* Make it a bit fancy with a nice font and double-sided border */
     border: 6px double silver;
     font-family: Georgia, serif;
+
+    .cc-attribution {
+        font-size: smaller;
+        padding-top: 10px;
+    }
 }
 
 .cc-quote-masthead {
