Remove special font in cards

--- a/assets/sass/cc-quote.scss
+++ b/assets/sass/cc-quote.scss
@@ -11,9 +11,9 @@
     padding: 10px;
     width: 280px;
 
-    /* Make it a bit fancy with a nice font and double-sided border */
+    /* Make it a bit fancy with a double-sided border */
     border: 6px double silver;
-    font-family: Georgia, serif;
+    font-family: serif;
 
     .cc-attribution {
         font-size: smaller;
