Put a little margin on top

--- a/assets/sass/cc-quote.scss
+++ b/assets/sass/cc-quote.scss
@@ -14,6 +14,7 @@
     /* Make it a bit fancy with a double-sided border */
     border: 6px double silver;
     font-family: serif;
+    margin-top: 10pt;
 
     .cc-attribution {
         font-size: smaller;
