Load snippet CSS

--- a/assets/sass/cc.scss
+++ b/assets/sass/cc.scss
@@ -5,5 +5,6 @@
 @import "cc-masthead";
 @import "cc-quote";
 @import "cc-reality-check";
+@import "cc-snippet";
 @import "cc-task";
 @import "cc-title";
