--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
 <p>Sorry, but this page hasn't been constructed yet.</p>
-<a href='{{ "" | relURL }}'>Go Home</a>
+<p>Please add to the [TODO](/TODO/) list</p>
+<p><a href='{{ "" | relURL }}'>Go Home</a></p>
 {{ end }}
