--- a/layouts/snippet/cc-card.html
+++ b/layouts/snippet/cc-card.html
@@ -1,5 +1,5 @@
 <article class="cc-card cc-{{ .Type }}-card">
     <a class="cc-url" href="{{ .Permalink }}">
-        <span class="cc-title">{{ .Params.title | markdownify | plainify }}</span>
+        <span class="cc-title">{{ .Params.title | markdownify | plainify | safeHTML }}</span>
     </a>
 </article>
