Get count from regular pages

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -7,5 +7,5 @@
     <li>{{- .Render "cc-card" -}}</li>
 {{ end -}}
 </ul>
-<em>This is a random selection of 13 pages from {{ len $pages }} pages.</em>
+<em>This is a random selection of 13 pages from {{ len .Site.RegularPages }} pages.</em>
 {{ end }}
