--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,9 +17,16 @@
   {{ .Content }}
 </section>
 
-<!-- tagged -->
+<!-- references -->
 <section class="cc-related-section">
   <ul>
+    <!-- from this page -->
+    {{ $from := partial "cc-get-from" .Title }}
+    {{ if $from }}
+      {{ range sort $from "Title" }}
+      <li>{{ .Render "cc-card" }}</li>
+      {{ end }}
+    {{ end }}
     <!-- related -->
     {{ range partial "cc-slice" .Params.related }}
       <li>{{ partialCached "cc-card-for" . . }}</li>
