Markdown not expanded here

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
 <p>Sorry, but this page hasn't been constructed yet.</p>
-<p>Please add to the [TODO](/TODO/) list</p>
+<p>Please add to the <a href="/TODO/">TODO</a> list</p>
 <p><a href='{{ "" | relURL }}'>Go Home</a></p>
 {{ end }}
