--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -73,7 +73,7 @@
 {{- end }}
 
 <!-- events -->
-{{ $evdate = index .Params "event-date" }}
+{{ $evdate := index .Params "event-date" }}
 {{ if $evdate }}
   {{ $events := partial "cc-get-events" $evdate }}
   {{ if $events }}
