Fix typo in comments

--- a/layouts/partials/cc-groupby.html
+++ b/layouts/partials/cc-groupby.html
@@ -29,7 +29,7 @@
             {{ continue }}
         {{ end}}
         {{/*
-           * Get the slide of pages that have this property value.
+           * Get the slice of pages that have this property value.
            * If the property value is not in the dictionary, create a new
            * slice and add the page to it. Otherwise, append the page to the
            * existing slice.
