--- a/layouts/partials/cc-get-events.html
+++ b/layouts/partials/cc-get-events.html
@@ -1,2 +1,2 @@
-{{ $dates := partialCached "cc-groupby" "event-date" "event-date" }}
+{{ $dates := partialCached "cc-groupby" "when" "when" }}
 {{ return index $dates . }}
