--- a/assets/sass/cc.scss
+++ b/assets/sass/cc.scss
@@ -1,11 +1,12 @@
 @import "views/cc-card";
 @import "views/cc-tag";
-@import "cc-cue";
-@import "cc-emoji";
-@import "cc-fragment";
-@import "cc-masthead";
-@import "cc-quote";
-@import "cc-reality-check";
-@import "cc-snippet";
-@import "cc-task";
-@import "cc-title";
+@import "types/cc-cue";
+@import "types/cc-emoji";
+@import "types/cc-excerpt";
+@import "types/cc-fragment";
+@import "types/cc-quote";
+@import "types/cc-reality-check";
+@import "types/cc-snippet";
+@import "types/cc-split";
+@import "types/cc-task";
+@import "types/cc-title";
