--- a/assets/sass/views/cc-tag.scss
+++ b/assets/sass/views/cc-tag.scss
@@ -6,7 +6,9 @@
 
 .cc-tag {
     border-color: silver;
+    border-radius: 20pt;
     border-style: solid;
     border-width: 1px;
+    margin-right: 10pt;
     padding: 10px;
 }
