--- a/assets/sass/views/cc-tag.scss
+++ b/assets/sass/views/cc-tag.scss
@@ -5,9 +5,8 @@
     flex-wrap: wrap;
 }
 
-/* https://stackoverflow.com/questions/59903855/css-adding-padding-to-list-items-not-working-properly */
 .cc-tags-section li {
-    box-sizing: border-box;
+    margin: 8pt;
 }
 
 .cc-tag {
