--- a/layouts/_default/cc-card.html
+++ b/layouts/_default/cc-card.html
@@ -1,6 +1,6 @@
 <article class="cc-card cc-{{ .Type }}-card">
     <a class="cc-url" href="{{ .Permalink }}">
-        <span class="cc-title">{{ .Params.title | markdownify }}</span>
+        <span class="cc-title">{{ .Params.title | markdownify | plainify | safeHTML }}</span>
     </a>
     {{ with .Params.excerpt }}
     <span class="cc-excerpt">{{ . | markdownify | plainify | safeHTML }}</span>
