--- a/layouts/partials/cc-slice.html
+++ b/layouts/partials/cc-slice.html
@@ -8,7 +8,7 @@
     {{ if not (eq $type "[]string") -}}
 
         {{/* Identify the data types that will be cast into a slice */}}
-        {{ $types := slice "string" "maps.Params" "float64" "bool" "int" -}}
+        {{ $types := slice "string" "maps.Params" "float64" "bool" "int" "time.Time" -}}
 
         {{ if in $types $type -}}
             {{ $slice = slice . -}}
