Show date values

--- a/layouts/partials/cc-inline-for.html
+++ b/layouts/partials/cc-inline-for.html
@@ -8,11 +8,13 @@
     */}}
 {{ $type := (printf "%T" . ) -}}
 {{ if eq $type "string" -}}
-{{ with partialCached "cc-get" . . }}
-{{ .Render "cc-inline" }}
-{{ else }}
-<span class="cc-inline">
-{{ . | markdownify -}}
-</span>
-{{ end -}}
+    {{ with partialCached "cc-get" . . }}
+        {{ .Render "cc-inline" }}
+    {{ else }}
+        <span class="cc-inline">
+        {{ . | markdownify -}}
+        </span>
+    {{ end -}}
+{{ else if eq $type "time.Time" }}
+    <span class="cc-inline">{{ . }}</span>
 {{ end }}
