Apply style to inline items

--- a/assets/sass/types/cc-snippet.scss
+++ b/assets/sass/types/cc-snippet.scss
@@ -1,4 +1,4 @@
-.cc-snippet-card, .cc-snippet-masthead {
+.cc-snippet-card, .cc-snippet-inline, .cc-snippet-masthead {
     border: 3px dotted silver;
     padding: 10pt;
     margin-top: 10pt;
