--- a/layouts/_default/cc-masthead.html
+++ b/layouts/_default/cc-masthead.html
@@ -1,10 +1,9 @@
-{{ $title := .Params.title | markdownify }}
 <header class="cc-masthead cc-{{ .Type }}-masthead">
     <h1 class="cc-title">
     {{ if .Params.next }}
         {{ $next := partial "cc-get-first" .Params.next }}
         {{ if $next }}
-          <a href="{{ $next.RelPermalink }}">{{ $title | markdownify }}</a>
+          <a href="{{ $next.RelPermalink }}">{{ .Params.title | markdownify }}</a>
         {{ else }}
           {{ .Params.title | markdownify }}
         {{ end }}
