--- a/assets/sass/types/cc-cue.scss
+++ b/assets/sass/types/cc-cue.scss
@@ -17,7 +17,7 @@
     margin-right: 8px;
 }
 
-.cc-cue-inline a, .cc-cue-chip a, .cc-cue-card a {
+.cc-cue-inline a, .cc-cue-chip a, .cc-cue-card a, .cc-cue-tag a{
     @include cc-cue-base;
     text-decoration: none;
 }
