Show a scissors bullet point

--- a/assets/sass/types/cc-snippet.scss
+++ b/assets/sass/types/cc-snippet.scss
@@ -3,3 +3,7 @@
     padding: 10pt;
     margin-top: 10pt;
 }
+
+li:has(>.cc-snippet-card), li:has(>.cc-snippet-inline) {
+    list-style-type: "✂";
+}
