Do not link heading

--- a/layouts/_default/cc-heading.html
+++ b/layouts/_default/cc-heading.html
@@ -1,3 +1,3 @@
 <h2 class="cc-heading cc-{{ .Type }}-heading">
-    {{ .Render "cc-inline" }}
+    <span class="cc-title">{{ .Params.title | markdownify }}</span>
 </h2>
