Remove HR from footer and replace with CSS

--- a/assets/sass/cc.scss
+++ b/assets/sass/cc.scss
@@ -11,3 +11,9 @@
 @import "types/cc-task";
 @import "types/cc-title";
 @import "types/cc-website";
+
+.cc-footer {
+    border-top-color: #f0f0f0;
+    border-top-style: ridge;
+    border-top-width: 2px;
+}
