--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="{{ $style.Permalink }}">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico"/>
 </head>
-<body class="cc-{{ .Type }}-body">
+<body class="cc-body cc-{{ .Type }}-body">
 
 {{ block "main" . }}
 {{ end }}
