Render a chemical element as a card

--- a/assets/sass/cc.scss
+++ b/assets/sass/cc.scss
@@ -6,6 +6,7 @@
 // Import types (which may adjust the views)
 @import "types/cc-cue";
 @import "types/cc-emoji";
+@import "types/cc-element";
 @import "types/cc-excerpt";
 @import "types/cc-fragment";
 @import "types/cc-quote";
