--- a/assets/sass/types/cc-element.scss
+++ b/assets/sass/types/cc-element.scss
@@ -53,3 +53,13 @@
     font-size: xx-large;
     text-align: center;
 }
+
+.cc-element-masthead {
+    /* Fill viewport */
+    min-height: 100vh;
+    width: 100%;
+
+    /* Center, stacked from top to bottom */
+    display: flex;
+    flex-direction: column;
+}
