Show excerpt italicized

--- a/assets/sass/types/cc-excerpt.scss
+++ b/assets/sass/types/cc-excerpt.scss
@@ -1,5 +1,6 @@
 .cc-masthead .cc-excerpt {
     border-left: 4pt solid blue;
     margin-left: 0;
-    padding-left: 12pt;    
+    padding-left: 12pt;
+    font-style: italic;
 }
