Center the element box

--- a/assets/sass/types/cc-element.scss
+++ b/assets/sass/types/cc-element.scss
@@ -57,6 +57,7 @@
 .cc-element-masthead {
     /* Center, stacked from top to bottom */
     display: flex;
+    align-items: center;
     flex-direction: column;
     width: 100%;
 }
