Fix border color of the tag

--- a/assets/sass/types/cc-cue.scss
+++ b/assets/sass/types/cc-cue.scss
@@ -64,3 +64,8 @@
     text-align: center;
     word-spacing: .1em;
 }
+
+/* Fix border color of the tag */
+.cc-tag:has(>.cc-cue-tag) {
+    border-color: #1C76B8;
+}
