Make the hyperlink clear

--- a/assets/sass/types/cc-cue.scss
+++ b/assets/sass/types/cc-cue.scss
@@ -33,7 +33,7 @@
 .cc-cue-masthead a,
 .cc-cue-tag a {
     color: white;
-    text-decoration: none;
+    //text-decoration: none;
 }
 
 .cc-cue-card {
