--- a/assets/sass/types/cc-excerpt.scss
+++ b/assets/sass/types/cc-excerpt.scss
@@ -1,4 +1,4 @@
-.cc-excerpt-section > li {
+.cc-excerpt-section li {
     border-left: 4pt solid blue;
     margin-left: 0;
     padding-left: 12pt;
