--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,7 @@
 </section>
 
 <!-- references -->
-<section class="cc-related-section">
+<section class="cc-references-section">
   <ul>
     <!-- from this page -->
     {{ $from := partial "cc-get-from" .Title }}
@@ -17,10 +17,6 @@
       {{ range sort $from "Title" }}
       <li>{{ .Render "cc-card" }}</li>
       {{ end }}
-    {{ end }}
-    <!-- related -->
-    {{ range partial "cc-slice" .Params.related }}
-      <li>{{ partialCached "cc-card-for" . . }}</li>
     {{ end }}
     <!-- tagged with this page title -->
     {{ $pages := partial "cc-get-tagged" .Title }}
@@ -46,7 +42,6 @@
     "published"
     "quote"
     "recipe"
-    "related"
     "snippets"
     "spotify"
     "thumbnail"
