--- a/assets/sass/types/cc-website.scss
+++ b/assets/sass/types/cc-website.scss
@@ -20,12 +20,12 @@
 
 /* excerpt section */
 .cc-website-body > .cc-excerpt-section {
-    order: -2;
+    //order: -2;
 }
 
 /* website section */
 .cc-website-body > .cc-website-section {
-    order: -1;
+    //order: -1;
     background-color: #f0f0f0;
     border-radius: 10pt;
 }
