Remove bullet from excerpt

--- a/assets/sass/types/cc-website.scss
+++ b/assets/sass/types/cc-website.scss
@@ -19,8 +19,8 @@
 }
 
 /* excerpt section */
-.cc-website-body > .cc-excerpt-section {
-    //order: -2;
+.cc-website-body > .cc-excerpt-section ul {
+    list-style: none;
 }
 
 /* website section */
